# Amylator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Amylator/: Amylator-ios.pro  CMakeLists.txt
Amylator/resources/: images.qrc  qml.qrc
Amylator/resources/.AppleDouble/: .Parent
Amylator/resources/cfg/: MacOSXBundleInfo.plist
Amylator/resources/icons/: Amylator.icns
Amylator/resources/ios/: Info.plist
Amylator/resources/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
Amylator/resources/ios/Assets.xcassets/Brand Assets.launchimage/: Contents.json
Amylator/resources/qml/: About.qml  Header.qml  Logging.qml  Network.qml  Plot.qml  main.qml
Amylator/resources/qml/Definitions/: Colors.qml  qmldir
Amylator/resources/qml/Schedule/: AddStep.qml  Header.qml  List.qml  Schedule.qml
Amylator/resources/qml/Widgets/: EditButton.qml  GarbageButton.qml  HeaderBar.qml  PauseButton.qml  PlayButton.qml  PlusButton.qml  Slider.qml  StopButton.qml  ZoomPad.qml  ZoomPadButton.qml
Amylator/source/: QAmylator.cpp  QAmylator.h  QClient.cpp  QClient.h  QLogging.cpp  QLogging.h  QPlotData.cpp  QPlotData.h  QScheduleData.cpp  QScheduleData.h  main.cpp
AmylatorLib/: CMakeLists.txt
AmylatorLib/Brew/: Config.h
AmylatorLib/Brew/data/: MashLog.cpp  MashLog.h  MashRequest.cpp  MashRequest.h  MashStep.cpp  MashStep.h  Message.cpp  Message.h
AmylatorLib/Brew/mash/: MashController.cpp  MashController.h  MashProcessor.cpp  MashProcessor.h  RealtimeLoop-ios.cpp  RealtimeLoop.cpp  RealtimeLoop.h
AmylatorServer/: CMakeLists.txt
AmylatorServer/source/: QAmylator.cpp  QAmylator.h  QConsoleReader.cpp  QConsoleReader.h  QServer.cpp  QServer.h  main.cpp
config/: CMakeSetup.cmake  iOS.cmake
